<resources>
    <string name="app_name">电厂助手</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">首页</string>
    <string name="title_announce">公告</string>
    <string name="title_notifications">消息</string>
    <string name="title_mine">我的</string>
    <string name="title_activity_login">登录</string>
    <string name="title_left_cancel">取消</string>
    <string name="title_right_ensure">完成</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入您的账号</string>
    <string name="prompt_password">请输入您的密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_login_login_need">请登录</string>

    <array name="item_name_array">
        <item name="first_fragment_item1">负荷管理</item>
        <item name="first_fragment_item2">电量管理</item>
        <item name="first_fragment_item3">经济指标</item>
        <item name="first_fragment_item4">统计报表</item>
        <item name="first_fragment_item5">设备信息</item>
        <item name="first_fragment_item6">值长日志</item>
        <item name="first_fragment_item7">生产早会</item>
        <item name="first_fragment_item8">值际竞赛</item>
        <item name="first_fragment_item9">环保指标</item>
        <item name="first_fragment_item10">缺陷管理</item>
        <item name="first_fragment_item11">员工培训</item>
    </array>

    <string-array name="title_array">
        <item>电量填报</item>
    </string-array>

    <array name="item_icon_array">
        <item>@drawable/ic_fuhe_mangment</item>
        <item>@drawable/ic_dianliang_guanli</item>
        <item>@drawable/ic_jingji_zhibiao</item>
        <item>@drawable/ic_tongji_baobiao</item>
        <item>@drawable/ic_shei_bei_xin_xi</item>
        <item>@drawable/ic_zhizhang_log</item>
        <item>@drawable/ic_shengchan_zaohui</item>
        <item>@drawable/ic_zhiji_jingsai</item>
        <item>@drawable/ic_huanbao_zhibiao</item>
        <item>@drawable/ic_que_xian_guan_li</item>
    </array>

    <string name="btn_all_fh_text">全厂</string>
    <string name="btn_1_fh_text">1#机组</string>
    <string name="btn_2_fh_text">2#机组</string>
    <string name="btn_hour_data_fh_text">近一小时数据</string>
    <string name="string_year">年</string>
    <string name="string_month">月</string>
    <string name="string_day">日</string>

    <string name="first_page_app_name">发电企业移动辅助管理系统</string>
    <string name="logo_name">发电企业移动端辅助系统</string>
    <string name="xun_jian_guan_li">巡检管理</string>
    <string name="wen_ti_pai_cha">问题排查</string>
    <string name="ji_hua_ren_wu_guan_li">计划任务管理</string>

    <string name="fuhe_table_type">类型</string>
    <string name="fuhe_table_average">日平均负荷率</string>
    <string name="fuhe_table_huanbi">符合率日环比</string>
    <string name="fuhe_table_AGC">A G C 指令值</string>
    <string name="fuhe_table_fuhe">实时负荷</string>
    <string name="select_start_date">请选择开始时间</string>
    <string name="select_end_date">请选择结束时间</string>


    <string name="fuhelv_change">负荷率变化趋势图</string>
    <string name="wanqianwanshi">万千瓦时</string>
    <string name="yiqianwanshi">亿千瓦时</string>
    <string name="xiaoshi">小时</string>
    <string name="rihuanbi">日环比</string>
    <string name="yuehuanbi">月环比</string>
    <string name="tongbi">同比</string>
    <string name="ridianliang">日电量</string>
    <string name="yuedianliang">月电量</string>
    <string name="ninadianliang">年电量</string>
    <string name="fill_hint">点击填写</string>

    <string name="ripingjun">日平均负荷:</string>
    <string name="zuoridian">昨日电量:</string>
    <string name="riliyong">日利用小时数:</string>
    <string name="shengyu">剩余日均电量:</string>
    <string name="benyue">本月计划电量:</string>
    <string name="yuejihua">月计划完成率:</string>
    <string name="yueliyong">月利用小时数:</string>
    <string name="nianjihua">年计划电量:</string>
    <string name="ninashiji">年实际电量:</string>

    <string name="zhi_bia">指标</string>
    <string name="kong_qi_shi_du">空气湿度</string>
    <string name="kong_qi_ya_li">空气压力</string>
    <string name="you_gong_fu">有功负荷</string>
    <string name="qi_ta">其它</string>
    <string name="xian_e_zhi">限额标志</string>
    <string name="search_hint_text">请输入您要搜索的信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nong_du_text">出口浓度排放曲线</string>

    <string name="scan_title">扫描设备信息</string>

    <string name="string_data_empty">暂无数据</string>


    //itil part
    <string name="net_url">设置服务器地址</string>
    <string name="solving">待处理</string>
    <string name="my_solving">我的待处理</string>
    <string name="solved">已处理</string>
    <string name="re">返回</string>
    <string name="server">请输入服务器地址</string>
    <string name="save">保 存</string>
    <string name="server_title">设置服务器地址</string>
    <string name="toast_server">服务器地址不能为空</string>
    <string name="toast_server_end">请已 / 结尾</string>
    <string name="toast_server_save">保存成功</string>
    <string name="toast_server_fail">保存失败</string>
    <string name="exit_main">再按一次后退键退出程序</string>
    <string name="order_type">类型</string>
    <string name="template">从模板中选择</string>
    <string name="next">下一步</string>
    <string name="search_view">请输入服务报告、项目或客户的名称</string>
    <string name="service_report">服务报告</string>
    <string name="doing">进行中</string>
    <string name="finished">已完成</string>
    <string name="select_person">选择人员</string>
    <string name="loading">正在加载中...</string>
    <string name="cancel">取消</string>
    <string name="empty_text">没有相关结果</string>
    <string name="event_classification">事件分类</string>
    <string name="order_solved_title">工单处理</string>
    <string name="sure">确定</string>
    <string name="contract_info">合同信息</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="capture_image">抓取图片</string>

</resources>
