<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.powerge.wise.powerge.otherPages.huaBao.HuanBaoKaoHeFragment">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_line">
                <!--全场 机组 button-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/btn_all_fh"
                            style="@style/style_fu_he_top_radios"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/btn_all_fh_text" />

                        <RadioButton
                            android:id="@+id/btn_1_fh"
                            style="@style/style_fu_he_top_radios"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/btn_1_fh_text" />

                        <RadioButton
                            android:id="@+id/btn_2_fh"
                            style="@style/style_fu_he_top_radios"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/btn_2_fh_text" />
                    </RadioGroup>


                </LinearLayout>
            </android.support.design.widget.AppBarLayout>

            <ExpandableListView
                android:id="@+id/content_kao_he"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"></ExpandableListView>
        </android.support.design.widget.CoordinatorLayout>
    </FrameLayout>
</layout>