<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.powerge.wise.powerge.otherPages.DatePeriodSelectActivity">

        <FrameLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:text="@string/title_left_cancel"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/title"
                style="@style/Title" />

            <TextView
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/title_right_ensure"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">


            <RadioButton
                android:id="@+id/text_start_d"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_period_date_bg"
                android:button="@null"
                android:gravity="center_vertical"
                android:hint="@string/select_start_date"
                android:onClick="onClick"
                android:paddingLeft="15dp"
                android:textColor="@color/text_color_jizu_name"
                android:textColorHint="@color/text_color_jizu_name"
                android:textSize="12sp" />


            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="至"
                    android:textColor="@color/text_color_jizu_name"
                    android:textSize="12sp" />
            </FrameLayout>

            <RadioButton
                android:id="@+id/text_end_d"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_period_date_bg"
                android:button="@null"
                android:gravity="center_vertical"
                android:hint="@string/select_end_date"
                android:onClick="onClick"
                android:paddingLeft="15dp"
                android:textColor="@color/text_color_jizu_name"
                android:textColorHint="@color/text_color_jizu_name"
                android:textSize="12sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <DatePicker
            android:id="@+id/date_picker_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:theme="@style/AppTheme.AppDate" />


    </LinearLayout>
</layout>